--- a/frontend/style.css
+++ b/frontend/style.css
@@ -65,14 +65,25 @@ img {vertical-align: middle;}
 PIZZA THINGS
 *********/
 .pizza-container{
-    border: 1px solid rgb(46, 37, 37);
     border-radius: 5px;
-    background-color:rgb(46, 37, 37);
-    padding: 2rem;
+    background-color:rgb(240, 61, 61);
+    color:rgb(228, 228, 228);
+    /* padding: 2rem; */
+    margin: 2rem;
 }
 #root{
     display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-around;
 
+}
+img{
+  width: 320px;
+  border-radius: 5px 5px 0 0;
+}
+[class^=pizza] {
+  margin-left: 1rem;
 }
 
 
